Adding db connection and generic entity.
